# pipes-cereal

./: .travis.yml  LICENSE  README.md  pipes-cereal.cabal
src/Pipes/: Cereal.hs
test/: Main.hs
