name: pipes-cereal
version: 0.1
synopsis: Decode pipes byte streams with cereal parsers
category: Pipes, Parsing
author: Yin Guanhao
maintainer: yinguanhao@gmail.com
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10
tested-with: GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
description:
  Provides functions to decode @pipes@ byte streams with @cereal@ parsers.

library
  exposed-modules:
    Pipes.Cereal
  hs-source-dirs: src
  build-depends:
    base,
    bytestring,
    cereal,
    exceptions,
    pipes,
    pipes-parse
  ghc-options: -Wall
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    bytestring,
    pipes-cereal,
    pipes,
    cereal,
    pipes-parse,
    hspec
